changed some styling, trying to add publish feature to webpage controller

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -396,6 +396,7 @@ span img{
 	background-color: rgba(255, 255, 255, .4);
 	clear: both;
 	text-align: center;
+	box-shadow: 10px 10px 10px black;
 }
 
 .current_admin_box {
