--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -8,7 +8,7 @@
 	<%= f.file_field :img %> <br> <br>
   </div>
   <div class="actions">
-    <%= f.submit "Upload New Image"%>
+    <%= f.submit "Upload New Image"%> <br><br>
   </div>
 <% end %>
 
