--- a/app/views/webpages/_form.html.erb
+++ b/app/views/webpages/_form.html.erb
@@ -4,6 +4,10 @@
     <%= f.text_field :name %> <br> <br>
   </div>
   <div class="field">
+    <%= f.label :publish %><br>
+    <%= f.check_box :publish %> <br> <br>
+  </div>
+  <div class="field">
     <%= f.label :type %><br>
     <%= f.select :type, Webpage::PAGES.map {|x| [x]}%>
   </div> <br>
