changed out logos for newer versions

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -105,9 +105,10 @@
 } 
 
 .home_logo {
-	width: 400px;
-	margin-top: 230px;
-	margin-left: 420px;
+	width: 350px;
+	margin-top: 12%;
+	margin-left: 35%;
+	border-radius: 10px;
 
 }
 
@@ -170,9 +171,10 @@ body {
 }
 
 .other_logo {
-	width: 300px;
-	margin-top: 15%;
-	margin-left: 37%;
+	width: 275px;
+	margin-top: 8%;
+	margin-left: 39%;
+	border-radius: 10px;
 
 }
 
