--- a/app/views/webpages/_picturepage.html.erb
+++ b/app/views/webpages/_picturepage.html.erb
@@ -16,7 +16,7 @@
 						<li class="other_li"><%= link_to "FCL Blog", posts_path %></li>
 					</ul>
 				</nav>
-				<%= image_tag("Function.png", class: "other_logo") %>
+				<%= image_tag("FCLlogo.jpg", class: "other_logo") %>
 			</header>
 				<div class="slogan">
 					<h1> function </h1>
