--- a/app/views/webpages/_homepage.html.erb
+++ b/app/views/webpages/_homepage.html.erb
@@ -18,7 +18,7 @@
 						<li class="other_li"><%= link_to "FCL Blog", posts_path %></li>
 					</ul>
 				</nav>
-				<%= image_tag("Function.png", class: "home_logo") %>
+				<%= image_tag("FCLlogo.jpg", class: "home_logo") %>
 			</header>
 
 			<div class="slogan">
